[project]
name = "next_crm"
authors = [
    { name = "rtCamp", email = "erp@rtcamp.com"}
]
description = "Kick-ass Open Source CRM"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "twilio==8.5.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "**/doctype/*/boilerplate/*.py" # boilerplate are template strings, not valid python
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E402", # module level import not at top of file
    "E501", # line too long
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
    "UP032", # Use f-string instead of `format` call (translations)
    "UP030", # Use implicit references for positional format fields (translations)
    "B007",
    "RUF013"
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
